3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

include/config.h: fix Win32 log path so there actually is a log.
plugin/plugin_python.c: uint doesn't exist under Win32, use uint32 instead.

Patches from tracker, courtesy Kurtat:
patch 1022942: Random documentation updates
 doc/SurvivalGuide
 doc/Developers/programming_guide
 doc/Developers/protocol
 lib/settings
 lib/help/cast
patch 1022973: Words for numbers in spellbook description
 server/c_object
Ryo 2004-09-12

server/attack.c: Pass in skill (string) to change_exp instead of skop->skill -
   skop can be null, resulting in a crash here.  In addition, other calls
   to change_exp in this function use the skill string, so it is good to
   be consistent.
MSW 2004-09-09

server/c_wiz.c: Don't forget to skip blanks after reading item number or stack
   position. Works better for commands like patch :)
Ryo 2004-09-06

common/object.c: Fix insert_ob_in_map so right coordinates and map
   value are used on GET_MAP_OB call - was using values before changes
   for tiling were applied.
MSW 2004-09-02

server/player.c: allow to 'talk' to players with ambiguous names: use a
   perfect match even if other partial matches exist.
Andreas Kirschbaum 2004-08-30

include/define.h
server/shop.c
   add new flags F_IDENTIFIED and F_NOT_CURSED to query_cost() to pretend
   the item to be identified/not cursed or damned.
server/alchemy.c
   fix possible abuse of shadow alchemy: do not allow the generated items
   to be more valuable than the ingredients when using alternate recipes.
Andreas Kirschbaum 2004-08-24

common/map.c: Add extra check to make sure variable is set before calling