@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/rune.c: Prevent creation of level 0 runes. Re-enable runes to cast
+   multiple spells.
+Andreas Kirschbaum 2004-09-14
+
 include/config.h: fix Win32 log path so there actually is a log.
 plugin/plugin_python.c: uint doesn't exist under Win32, use uint32 instead.
 
